eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/CPF_Property__c.object
<CustomObject>
    <description>For use by CPF to add details of property portfolios</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Date_for_Next_Valuation__c</fullName>
        <label>Estimated Date for Next Valuation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_amount__c</fullName>
        <label>Insurance amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_amount_comments__c</fullName>
        <label>Insurance amount comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_expiry_date__c</fullName>
        <label>Insurance expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_value__c</fullName>
        <label>Market value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>CPF Properties</relationshipLabel>
        <relationshipName>CPF_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Comments__c</fullName>
        <inlineHelpText>List of Properties and other comments</inlineHelpText>
        <label>Other Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <label>Post code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Support_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Support Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPF_Properties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revaluation_Due_Date__c</fullName>
        <label>Revaluation Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPF_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valuation_date__c</fullName>
        <label>Valuation date</label>
        <type>Date</type>
    </fields>
    <label>CPF Property</label>
    <nameField>
        <displayFormat>CPF-P-{0000}</displayFormat>
        <label>CPF Property Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPF Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>